@@ -1,3 +1,5 @@
-EBUILD qoauth-9999.ebuild 869 RMD160 687838876936995a15df96ee6995285e02737e46 SHA1 b53c2e44072b0c50356368f880721d63ead7e768 SHA256 bdff38705febd55c76e4ceef2ca44b93504f18496a4460e00e1b3a49abbdc7c3
-MISC ChangeLog 613 RMD160 608eddf038baa0f69abf47d0ea647465e55ad287 SHA1 5eef3e462b9aea9b45e84f6907128b006c03d3c4 SHA256 1f5b553c3012728168ac29f811865e7dcc7e185ba210b1c5e3cb542573e6755c
+DIST qoauth-1.0-src.tar.bz2 41392 RMD160 e50a9e3404e318b11928fa64167e2d0d7e6ec0c5 SHA1 1871712ddf946f134b4c102089d5e52916e6f283 SHA256 a86604b8d3e353a7de641525d5d3ffc078d8977d3d24614cf73891f668eb28f6
+EBUILD qoauth-1.0.ebuild 1480 RMD160 f33732e719f01dfb4e2c3a7e80ae23a525c73019 SHA1 3facf5b7d8be80a3d9fee34d2165263855fc4b9a SHA256 267b569651b83620d36db3eb04fe42da6528f7b172605fae3f8e303c753f2b24
+EBUILD qoauth-9999.ebuild 1341 RMD160 61d345e609cf10e0a9d480ca01c8e206fe5f2ed7 SHA1 5d46678802a14b9aae708b540b5fd11509f0381e SHA256 768f5dcda10b0462244cb5163b9b97e3bd626351a41efc7282c8892aeeffa2ec
+MISC ChangeLog 814 RMD160 33f91af3d58aa637cac1be3adaf281be359023a6 SHA1 0a7f8876c4e45d43c8008a4b2fa3e99bfb5b2884 SHA256 cbc64647cc2958a932a1d7f893f979218c00aa201009fa3c66c81eaca6372d31
 MISC metadata.xml 285 RMD160 4d6c5f6a2bd373cfe580a804ba94be14fc5dfe66 SHA1 8eb3b5d4234024fafdf14c58b19de430ba2c3f60 SHA256 bf264aae9c3905d59e7856f76206208c87f5d0dcf8676b488be4f3501b417ce1
