@@ -1,3 +1,5 @@
-EBUILD qtwitter-9999.ebuild 1652 RMD160 f6804a8d674bae0a3a5a70ca494bff5ac55a712e SHA1 331daac04beee9dcc6059a5a87d11d59eb82adc2 SHA256 f34c18b41b7147a0c56bb9c068bf2e43f3310b69ec99a8c0dc80763ee4d04924
-MISC ChangeLog 2397 RMD160 95f1dff161f6c4e82cab315e88de4c2cff2cce5d SHA1 2328ce74a676bba219d2d1340a3c2b41119dc5bf SHA256 d4fba1d476067e32c7edc27c514eb46b7bcecb98359be1b594a3484aaec31184
+DIST qtwitter-0.8.3-src.tar.gz 717214 RMD160 8344196f3962ca300b209fe3df4cc23d7f9deaa5 SHA1 7ec6023791de8b06527b5a729c43483b12775a21 SHA256 82d8ae0a1bc2ce8093c42087ac13c3e1b51e1aefccc49a631b1b9e4f373e71ed
+EBUILD qtwitter-0.8.3.ebuild 1981 RMD160 03533f535d565ac03a02cf94e96b5fae6a9cc330 SHA1 6bb3579c02ccd1aa6a8448dcfc1df9a84ce05c67 SHA256 bbccd9437b481c19d2ddc7041b2713a707f1acfd90f21f8a602b3f0c416c7853
+EBUILD qtwitter-9999.ebuild 1676 RMD160 4c5f0e63f4a5e536a170c2559d39713147183db2 SHA1 3e673fb7f4a3bd9a31ede9286cc107d716810569 SHA256 e2ed68612937225a5a56f63624880dba3f2f34173ad86eff45ed37d2377b0849
+MISC ChangeLog 2594 RMD160 1f460d8a8942ce2589460c3daf8d372bd65a899c SHA1 54ddd5b8356c67cecef11f9b1283a6bce3ee17bc SHA256 0d98293ecb7fe945da491d3f3153bd7bed16700dc454fec52faad52481d3cf69
 MISC metadata.xml 380 RMD160 e11d6dc2585d571ec9d9ddccc1d581a3b7cafedf SHA1 f0963ee391975a19e9b70670bda55946c4789cc0 SHA256 b54d5ce923bbb84db04164aeb2824b7edd7e1d0c8f1a9d961188f3427a727310
