@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*qtwitter-0.8.3 (08 Aug 2009)
+
+  08 Aug 2009; Dominik Kapusta <d@ayoy.net> +qtwitter-0.8.3.ebuild,
+  qtwitter-9999.ebuild:
+  Version bump, now depends on dev-libs/qoauth-1.0. Updated live ebuild.
+
   14 Jul 2009; Markos Chandras <hwoarang@gentoo.org> -qtwitter-0.8.0.ebuild:
   On tree
 
