@@ -2,6 +2,13 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*qoauth-1.0 (08 Aug 2009)
+
+  08 Aug 2009; Dominik Kapusta <d@ayoy.net> +qoauth-1.0.ebuild,
+  qoauth-9999.ebuild:
+  Version bump, added support for installing static library and updated live
+  ebuild.
+
   14 Jul 2009; Markos Chandras <hwoarang@gentoo.org> -qoauth-0.1.0.ebuild:
   On tree
 
